force-app/main/default/objects/staff__c/staff__c.object-meta.xml
<CustomObject>
    <label>staff</label>
    <nameField>
        <label>staff</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>staff</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>