force-app/main/default/objects/staff__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Education__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
            </value>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>CCNA</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>