force-app/main/default/objects/staff__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B TECH</fullName>
            </value>
            <value>
                <fullName>B ARCH</fullName>
            </value>
            <value>
                <fullName>B COM</fullName>
            </value>
            <value>
                <fullName>M TECH</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>