force-app/main/default/objects/staff__c/fields/Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Manager_ID__c</fullName>
    <label>Manager_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>