force-app/main/default/objects/staff__c/fields/Parent_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project_Id__c</fullName>
    <formula>Project__r.Project_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Project Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>