force-app/main/default/objects/staff__c/fields/Pension_scheme__c.field-meta.xml
<CustomField>
    <fullName>Pension_scheme__c</fullName>
    <label>Pension scheme</label>
    <length>20</length>
    <type>Text</type>
</CustomField>