force-app/main/default/objects/staff__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone_Number</label>
    <type>Phone</type>
</CustomField>