force-app/main/default/objects/staff__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>