force-app/main/default/objects/staff__c/recordTypes/Permanent.recordType-meta.xml
<RecordType>
    <fullName>Permanent</fullName>
    <active>true</active>
    <description>Permanent Staffs</description>
    <label>Permanent</label>
</RecordType>