force-app/main/default/objects/staff__c/validationRules/Salary_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_not_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(Salary__c) &amp;&amp; RecordType.DeveloperName == &apos;Permanent&apos;</errorConditionFormula>
    <errorMessage>Salary cannot be blank</errorMessage>
</ValidationRule>