force-app/main/default/objects/staff__c/validationRules/staff_id_should_not_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>staff_id_should_not_be_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Staff_ID__c)</errorConditionFormula>
    <errorMessage>Staff Id should be provided</errorMessage>
</ValidationRule>