force-app/main/default/objects/staff__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Location__c</columns>
    <columns>Project__c</columns>
    <columns>Parent_Project_Id__c</columns>
    <columns>Salary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>