force-app/main/default/objects/staff__c/listViews/B_TECH_STAFF.listView-meta.xml
<ListView>
    <fullName>B_TECH_STAFF</fullName>
    <columns>NAME</columns>
    <columns>Education__c</columns>
    <columns>Location__c</columns>
    <columns>Email__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Education__c</field>
        <operation>equals</operation>
        <value>B TECH</value>
    </filters>
    <label>B TECH - STAFF</label>
</ListView>